# chess_bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  full-traefik-values.yaml
assets/: chess-bot-ingress.yaml  docker-registry-ingress.yaml  grafana-ingress.yaml  k3s-vm.yaml  kaniko-build.yaml  kubernetes-dashboard-ingress.yaml  kubernetes-dashboard-service-account.yaml  traefik-service-monitor.yaml
chess_bot/: Cargo.toml  Dockerfile
chess_bot/src/: chess.rs  main.rs  structs.rs
deploy/helm/: Chart.yaml  cert-manager.yaml  chess-bot.yaml  docker-registry.yaml  traefik.yaml
deploy/k8s/certs/: cluster-issuer.yaml  debian-k3s-tls.yaml  gateway-tls.yaml  gateway.yaml  linkerd-identity-trust-roots.yaml  linkerd-trust-anchor.yaml  traefik-gateway-tls.yaml
deploy/k8s/charts/: cert-manager.yaml  chess-bot.yaml  docker-registry.yaml  istio-base.yaml  istiod.yaml  kube-prometheus-stack.yaml  linkerd-control-plane.yaml  linkerd-crds.yaml  linkerd-viz.yaml  linkerd.yaml  loki-stack.yaml  ngrok-operator.yaml  tempo.yaml  traefik.yaml  trust-manager.yaml
deploy/k8s/dns/: coredns-config.yaml
deploy/k8s/gateways/: gateway.yaml  traefik-gateway.yaml
deploy/k8s/ingress/: chess-bot-external-ingress.yaml  chess-bot-ingress.yaml  chess-bot-ngrok-ingress.yaml  docker-registry-external-ingress.yaml  docker-registry-ingress.yaml  grafana-external-ingress.yaml  grafana-ingress.yaml  tempo-external-ingress.yaml
deploy/k8s/jobs/: kaniko-build-job.yaml
deploy/k8s/namespaces/: chess-bot.yaml
deploy/k8s/routes/: chess-bot-route.yaml  docker-registry-route.yaml  route.yaml  test.yaml
deploy/k8s/secrets/: debian-k3s-tls.yaml
deploy/k8s/storage/: cicd-kaniko-local-pvc.yaml  cicd.yaml  volumes.yaml
deploy/kustomize/: kustomization.yaml
deploy/kustomize/chess-bot/: ngrok-ingress-template.yaml
deploy/kustomize/chess-engine-api/: chart.yaml
deploy/kustomize/cicd/: build-job-template.yaml
deploy/kustomize/kong-mesh/: chart.yaml  namespace.yaml
deploy/kustomize/linkerd/: control-plane-chart.yaml  kustomization.yaml
deploy/kustomize/traefik/: certificate.yaml  chart.yaml  chess-bot-route.yaml  chess-engine-api-route.yaml  docker-registry-route.yaml  gateway.yaml  grafana-route.yaml  kong-mesh-route.yaml  kustomization.yaml  linkerd-viz-route.yaml  prometheus-route.yaml  route-template.yaml  tempo-route.yaml
deploy/kustomize/windmill/: chart.yaml
deploy/vm/: debian-k3s.yaml  ubuntu-k3s-vm.yaml
helm/: Chart.yaml  values.yaml
scripts/: build-application.sh  build.sh  cleanup.sh  create-vm.sh  deploy-application.sh  deploy-infrastructure.sh  deploy-routes.sh  deploy.sh  patch-coredns.sh  setup-infrastructure.sh  setup.sh
src/: chess.rs  main.rs  routes.rs
