[package]
name = "chess_engine_api"
version = "0.1.0"
edition = "2021"

[dependencies]
# async runtime
smol = { git = "https://github.com/brandonros/smol.git", rev = "e593cac01d2ee4a1241b8c292f61b8a6d800bb08" }
# logging
env_logger = "0.11.5"
log = "0.4.22"
# error handling
simple_error = { git = "https://github.com/brandonros/simple_error.git" }
# http server
http_server = { git = "https://github.com/brandonros/http_server.git", rev = "43fda48050756c6ee73d1de2b6ffaea4d1eba522" }
# http + url
http = "1.1.0"
# json
miniserde = "0.1.40"
# chess
rustic = { git = "https://github.com/brandonros/rustic.git", rev = "1053aa794e96c8f1491bf5e0ed3bd7b921260e06" }
# rustic peer dependency
crossbeam-channel = "0.5.13"
dotenvy = "0.15.7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
